--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,12 @@ jobs:
           aws-region: us-east-1
       - name: Install modules
         run: npm ci
+      - name: 'Create env file'
+        run: |
+          touch .env
+          echo PUBLIC_BLOG_URL=${{ env.PUBLIC_BLOG_URL }} >> .env
+          echo PUBLIC_INDIVIDUAL_BLOG_URL=${{ env.PUBLIC_INDIVIDUAL_BLOG_URL }} >> .env
+          cat .env
       - name: Build application
         run: npm run build
       - name: Deploy to S3
