--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^0.14.0",
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^2.1.3",
     "@astrolib/seo": "^0.2.1",
     "astro": "^1.9.0",
+    "flowbite": "^1.5.5",
     "react-markdown": "^8.0.4",
     "tailwindcss": "^3.2.4",
-    "flowbite": "^1.5.5",
     "tw-elements": "^1.0.0-alpha13"
   },
   "devDependencies": {
