--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@astrojs/react": "^1.2.2",
+    "@tailwindcss/typography": "^0.5.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
