--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v1
         with:          
           role-to-assume:  ${{ secrets.WORKFLOW_ROLE_ARN }}
+          role-session-name: samplerolesession
           aws-region: us-east-1
       - name: Install modules
         run: npm ci
