--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "@astrojs/mdx": "^0.14.0",
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^2.1.3",
-    "@astrolib/seo": "^0.2.1",
     "astro": "^1.9.0",
+    "astro-seo": "^0.7.0",
     "flowbite": "^1.5.5",
+    "react-hook-form": "^7.42.1",
     "react-markdown": "^8.0.4",
     "tailwindcss": "^3.2.4",
     "tw-elements": "^1.0.0-alpha13"
   },
   "devDependencies": {
+    "@astrojs/partytown": "^1.0.2",
     "@astrojs/react": "^1.2.2",
     "@tailwindcss/typography": "^0.5.9",
     "react": "^18.2.0",
