--- a/package.json
+++ b/package.json
@@ -11,11 +11,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^0.14.0",
-    "@astrojs/sitemap": "^1.0.0",
-    "@astrojs/tailwind": "^2.1.3",
-    "astro": "^1.9.0",
-    "astro-seo": "^0.7.0",
+    
+    "astro": "^2.0.8",   
     "flowbite": "^1.5.5",
     "react-hook-form": "^7.42.1",
     "react-markdown": "^8.0.4",
@@ -25,8 +22,14 @@
   "devDependencies": {
     "@astrojs/partytown": "^1.0.2",
     "@astrojs/react": "^1.2.2",
+    "astro-seo": "^0.7.0",
     "@tailwindcss/typography": "^0.5.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@astrojs/mdx": "^0.14.0",
+    "@astrojs/sitemap": "^1.0.0",
+    "@astrojs/tailwind": "^3.0.1",
+   
+    "zod": "^3.20.2"
   }
 }
